@@ -1,6 +1,7 @@
 Version 2.02.16 -
 ====================================
-  Add startup timeout to RHEL4 clvmd startup script
+  Always compile debug logging into clvmd.
+  Add startup timeout to RHEL4 clvmd startup script.
   Add -T (startup timeout) switch to clvmd.
   Improve lvm_dump.sh robustness.
   Update lvm2create_initrd to support gentoo.
